react-helmet reorganized

--- a/interface/public/index.html
+++ b/interface/public/index.html
@@ -2,27 +2,34 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="%PUBLIC_URL%/images/logo.ico?v=2">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.ico?v=2">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.65">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.65" />
   <meta name="theme-color" content="#317EFB" />
-
+  <link rel="icon" href="%PUBLIC_URL%/images/logo.ico?v=2" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.ico?v=2" />
+  <link rel="canonical" href="https://pogpvp.com/" data-react-helmet="true" />
+  <title>PogPvP.com | Pokemon GO PvP simulator, ratings, shiny rates and more</title>
+  <meta content=" Pokemon GO PvP simulator, PvP ratings, shiny rates and more" data-react-helmet="true"
+    name="description" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://pogpvp.com/" data-react-helmet="true" />
+  <meta property="og:image" content="https://pogpvp.com/images/logo.ico?v=2" />
+  <meta content="PogPvP.com | Pokemon GO PvP simulator, ratings, shiny rates and more" property="og:title"
+    data-react-helmet="true" />
+  <meta content="Pokemon GO PvP simulator, PvP ratings, shiny rates and more" property="og:description"
+    data-react-helmet="true" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://pogpvp.com/" data-react-helmet="true" />
+  <meta property="twitter:image" content="https://pogpvp.com/images/logo.ico?v=2" />
+  <meta content="PogPvP.com | Pokemon GO PvP simulator, ratings, shiny rates and more" property="twitter:title"
+    data-react-helmet="true" />
+  <meta content="Pokemon GO PvP simulator, PvP ratings, shiny rates and more" property="twitter:description"
+    data-react-helmet="true" />
   <!-- Verification -->
   <meta name="google-site-verification" content="PErFycMNDtnlOeik2XTGqzsMWuqLjYKscen5WTeD6J8" />
   <meta name="yandex-verification" content="790023dbd218a8e4" />
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://pogpvp.com/">
-  <meta property="og:image" content="https://pogpvp.com//images/logo.ico?v=2">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://pogpvp.com/">
-  <meta property="twitter:image" content="https://pogpvp.com//images/logo.ico?v=2">
-
-
 </head>
 
 <body>
