bot list enlarged

--- a/interface/public/index.html
+++ b/interface/public/index.html
@@ -12,6 +12,7 @@
   <meta content=" Pokemon GO PvP simulator, PvP ratings, shiny rates and more" data-react-helmet="true"
     name="description" />
   <!-- Open Graph / Facebook -->
+  <meta property="fb:app_id" content="1.1" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pogpvp.com/" data-react-helmet="true" />
   <meta property="og:image" content="https://pogpvp.com/images/logo.ico?v=2" />
